data/derived/comb/progs/unify/prog4478.ml.out
Characters 179-191:
  | Halve x -> "(" ^ exprToString ^ ")/2"
                     ^^^^^^^^^^^^
Error: This expression has type expr -> string
       but an expression was expected of type string
